<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.TaskActivity">

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/tarefa"
        android:inputType="text" />
    <View
        android:background="@color/colorGrayText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prioridade"/>
    <Spinner
        android:id="@+id/spinner_priority"
        android:padding="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/colorGrayText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <CheckBox
        android:id="@+id/check_complete"
        android:text="@string/completa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/colorGrayText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/button_date"
        android:text="@string/clique_para_selecionar_a_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:background="@color/colorGrayText"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/adicionar_tarefa"/>


</LinearLayout>
