<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:contentDescription="@string/task_status_icon"
        android:src="@drawable/ic_todo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/text_description"
        android:padding="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/image_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descri_o"/>

    <TextView
        android:id="@+id/text_priority"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/text_description"
        app:layout_constraintLeft_toRightOf="@id/image_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prioridade"/>

    <TextView
        android:id="@+id/text_duedate"
        android:padding="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="DueDate"
        tools:ignore="HardcodedText"
        android:textStyle="bold"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#ececec"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_priority"/>

</androidx.constraintlayout.widget.ConstraintLayout>
